<?xml version="1.0" encoding="UTF-8"?>
<!--
  Copyright 2009 NEHTA
  Copyright 2021-2026 ADHA (Australian Digital Health Agency)
  SPDX: Apache-2.0; full text in LICENSE.txt at the repository root.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>au.gov.nehta</groupId>
    <artifactId>smi-xsp</artifactId>
    <version>17.0.0-SNAPSHOT</version>
    <name>XML Secured Payload Profiles</name>
    <description>Java classes for XML Secured Payload Profiles</description>
    <url>https://github.com/AuDigitalHealth/smi-xsp-java</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Admin Open Source</name>
            <email>admin.opensource@digitalhealth.gov.au</email>
            <organization>Australian Digital Health Agency</organization>
            <url>https://www.digitalhealth.gov.au/</url>
            <organizationUrl>https://www.digitalhealth.gov.au/</organizationUrl>
            <roles>
                <role>Admin</role>
            </roles>
            <timezone>UTC+10:00</timezone>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:${scm.repo.url}</connection>
        <developerConnection>scm:git:${scm.repo.url}</developerConnection>
        <url>${scm.repo.url}</url>
        <tag>${scm.tag}</tag>
    </scm>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/AuDigitalHealth/smi-xsp-java/issues</url>
    </issueManagement>

    <ciManagement>
        <system>GitHub Actions</system>
        <url>https://github.com/AuDigitalHealth/smi-xsp-java/actions</url>
    </ciManagement>

    <distributionManagement>
        <snapshotRepository>
            <id>central</id>
            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
        </snapshotRepository>
        <repository>
            <id>central</id>
            <url>https://central.sonatype.com</url>
        </repository>
    </distributionManagement>

    <properties>
        <maven.compiler.release>17</maven.compiler.release>
        <encoding>UTF-8</encoding>
        <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
        <project.resources.sourceEncoding>${encoding}</project.resources.sourceEncoding>
        <archetype.encoding>${encoding}</archetype.encoding>
        <skipTests>false</skipTests>
        <gpg.skip>true</gpg.skip>
        <scm.repo.url>https://github.com/AuDigitalHealth/smi-xsp-java.git</scm.repo.url>
        <scm.tag>HEAD</scm.tag>
        <release.localCheckout>true</release.localCheckout>
        <release.dryRun>false</release.dryRun>
        <release.goals>deploy</release.goals>
        <release.profiles>release</release.profiles>
        <release.tagNameFormat>@{project.artifactId}-@{project.version}</release.tagNameFormat>
        <release.pushChanges>true</release.pushChanges>
        <release.remoteTagging>true</release.remoteTagging>
        <release.scmCommentPrefix>[maven-release-plugin] </release.scmCommentPrefix>
        <!-- 4.0.4 is the current xmlsec line (Java 11+). -->
        <xmlsec.version>4.0.4</xmlsec.version>
        <junit.version>4.13.2</junit.version>
        <plugin.clean.version>3.5.0</plugin.clean.version>
        <plugin.compiler.version>3.15.0</plugin.compiler.version>
        <plugin.surefire.version>3.5.6</plugin.surefire.version>
        <plugin.javadoc.version>3.12.0</plugin.javadoc.version>
        <plugin.source.version>3.4.0</plugin.source.version>
        <plugin.deploy.version>3.1.4</plugin.deploy.version>
        <plugin.release.version>3.3.1</plugin.release.version>
        <plugin.central.publishing.version>0.11.0</plugin.central.publishing.version>
        <plugin.gpg.version>3.2.8</plugin.gpg.version>
        <jacoco.version>0.8.15</jacoco.version>
        <argLine>-Xmx1024m</argLine>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.santuario</groupId>
            <artifactId>xmlsec</artifactId>
            <version>${xmlsec.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>${plugin.clean.version}</version>
                <configuration>
                    <retryOnError>true</retryOnError>
                    <fast>false</fast>
                    <force>true</force>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>${plugin.gpg.version}</version>
                <configuration>
                    <skip>${gpg.skip}</skip>
                </configuration>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${plugin.javadoc.version}</version>
                <configuration>
                    <verbose>false</verbose>
                    <doclint>none</doclint>
                    <detectOfflineLinks>false</detectOfflineLinks>
                    <encoding>${encoding}</encoding>
                    <source>17</source>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${plugin.source.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>${plugin.deploy.version}</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>${plugin.central.publishing.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <autoPublish>true</autoPublish>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${plugin.surefire.version}</version>
                <configuration>
                    <skipTests>${skipTests}</skipTests>
                    <encoding>UTF-8</encoding>
                    <enableAssertions>true</enableAssertions>
                    <argLine>${argLine}</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>${plugin.release.version}</version>
                <configuration>
                    <useReleaseProfile>false</useReleaseProfile>
                    <releaseProfiles>${release.profiles}</releaseProfiles>
                    <localCheckout>${release.localCheckout}</localCheckout>
                    <dryRun>${release.dryRun}</dryRun>
                    <goals>${release.goals}</goals>
                    <tagNameFormat>${release.tagNameFormat}</tagNameFormat>
                    <pushChanges>${release.pushChanges}</pushChanges>
                    <remoteTagging>${release.remoteTagging}</remoteTagging>
                    <scmCommentPrefix>${release.scmCommentPrefix}</scmCommentPrefix>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${plugin.compiler.version}</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <proc>none</proc>
                    <compilerArgs>
                        <arg>-Xlint:unchecked</arg>
                    </compilerArgs>
                    <debug>true</debug>
                    <debuglevel>lines,vars,source</debuglevel>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>release</id>
            <properties>
                <gpg.skip>false</gpg.skip>
            </properties>
        </profile>
        <profile>
            <id>dev-javadoc-off</id>
            <properties>
                <maven.javadoc.skip>true</maven.javadoc.skip>
            </properties>
        </profile>
        <profile>
            <id>coverage</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>${jacoco.version}</version>
                        <executions>
                            <execution>
                                <id>jacoco-prepare-agent</id>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>jacoco-report</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
